@@ -34,8 +34,8 @@ Ready.
 # t	t	t  # name
 # void	str	str  # type
 #--------------------------#
-[ 0@0,	"batId",	"tmp_22"	]
-[ 1@0,	"batCacheid",	"18"	]
+[ 0@0,	"batId",	"tmp_15"	]
+[ 1@0,	"batCacheid",	"13"	]
 [ 2@0,	"tparentid",	"0"	]
 [ 3@0,	"batSharecnt",	"0"	]
 [ 4@0,	"batCount",	"0"	]
@@ -57,22 +57,21 @@ Ready.
 [ 20@0,	"tvarsized",	"0"	]
 [ 21@0,	"tnosorted",	"0"	]
 [ 22@0,	"tnorevsorted",	"0"	]
-[ 23@0,	"tnodense",	"0"	]
-[ 24@0,	"tnokey[0]",	"0"	]
-[ 25@0,	"tnokey[1]",	"0"	]
-[ 26@0,	"tnonil",	"1"	]
-[ 27@0,	"tnil",	"0"	]
-[ 28@0,	"batInserted",	"0"	]
-[ 29@0,	"ttop",	"0"	]
-[ 30@0,	"batCopiedtodisk",	"0"	]
-[ 31@0,	"batDirtydesc",	"dirty"	]
-[ 32@0,	"T->heap.dirty",	"clean"	]
-[ 33@0,	"tail.free",	"0"	]
-[ 34@0,	"tail.size",	"1024"	]
-[ 35@0,	"tail.storage",	"malloced"	]
-[ 36@0,	"tail.newstorage",	"malloced"	]
-[ 37@0,	"tail.filename",	"22.tail"	]
-[ 38@0,	"T->vheap->dirty",	"clean"	]
+[ 23@0,	"tnokey[0]",	"0"	]
+[ 24@0,	"tnokey[1]",	"0"	]
+[ 25@0,	"tnonil",	"1"	]
+[ 26@0,	"tnil",	"0"	]
+[ 27@0,	"batInserted",	"0"	]
+[ 28@0,	"ttop",	"0"	]
+[ 29@0,	"batCopiedtodisk",	"0"	]
+[ 30@0,	"batDirtydesc",	"dirty"	]
+[ 31@0,	"theap.dirty",	"clean"	]
+[ 32@0,	"tail.free",	"0"	]
+[ 33@0,	"tail.size",	"1024"	]
+[ 34@0,	"tail.storage",	"malloced"	]
+[ 35@0,	"tail.newstorage",	"malloced"	]
+[ 36@0,	"tail.filename",	"15.tail"	]
+[ 37@0,	"tvheap->dirty",	"clean"	]
 #~EndVariableOutput~#
 #--------------------------#
 # h	t  # name
